Modifies index file

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
   <header id="header" class="container" title="Like, really?">
-    <section class="nine columns">
+    <section>
       <img src="banner.jpg" alt="What's his deal?"/>
     </section>
   </header>
