--- a/index.html
+++ b/index.html
@@ -1,22 +1,25 @@
 <!DOCTYPE html>
 <html>
-  <link rel='stylesheet' href='base.css'>
-  <link rel='stylesheet' href='skeleton.css'>
-  <link rel='stylesheet' href='state.css'>
-  <link rel='stylesheet' href='module.css'>
-  <link rel='stylesheet' href='style.css'>
+  <link rel='stylesheet' href='stylesheets/base.css'>
+  <link rel='stylesheet' href='stylesheets/skeleton.css'>
+  <link rel='stylesheet' href='stylesheets/state.css'>
+  <link rel='stylesheet' href='stylesheets/module.css'>
+  <link rel='stylesheet' href='stylesheets/style.css'>
 <head>
   <title>What's His Deal?</title>
 </head>
 <body>
   <header id="header" class="container" title="Like, really?">
     <section>
-      <img src="banner.jpg" alt="What's his deal?"/>
+      <img src="images/logo.png" alt="What's his deal?" id="logo" />
     </section>
   </header>
-
-
-
+  <body>
+    <textarea id="textBox">Paste a chat log or email into here for analysis. Alternatively, you can also drag-and-drop a picture from your computer.</textarea>
+    <a href="answerpage.html">
+      <div id="analyze"></div>
+    </a>
+  </body>
   <footer>
   </footer>
 </body>
