--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     </section>
   </header>
   <body>
-    <textarea id="textBox">Paste a chat log or email into here for analysis. Alternatively, you can also drag-and-drop a picture from your computer.</textarea>
+    <textarea id="textBox">Paste a chat log or email from the male in question into here for analysis. Alternatively, you can also drag-and-drop a screenshot or picture of him from your computer.</textarea>
     <a href="answerpage.html">
       <div id="analyze"></div>
     </a>
