--- a/answerpage.html
+++ b/answerpage.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
   <html>
+    <script type="text/javascript" src="HisDealGenerator.js"></script>
     <link rel='stylesheet' href='stylesheets/base.css'>
     <link rel='stylesheet' href='stylesheets/skeleton.css'>
     <link rel='stylesheet' href='stylesheets/state.css'>
