--- a/index.html
+++ b/index.html
@@ -1,26 +1,25 @@
 <!DOCTYPE html>
 <html>
-  <link rel='stylesheet' href='stylesheets/base.css'>
-  <link rel='stylesheet' href='stylesheets/skeleton.css'>
-  <link rel='stylesheet' href='stylesheets/state.css'>
-  <link rel='stylesheet' href='stylesheets/module.css'>
-  <link rel='stylesheet' href='stylesheets/style.css'>
-<head>
-  <title>What's His Deal?</title>
-</head>
-<body>
-  <header id="header" class="container" title="Like, really?">
-    <section>
-      <img src="images/logo.png" alt="What's his deal?" id="logo" />
-    </section>
-  </header>
+    <link rel='stylesheet' href='stylesheets/base.css'>
+    <link rel='stylesheet' href='stylesheets/skeleton.css'>
+    <link rel='stylesheet' href='stylesheets/state.css'>
+    <link rel='stylesheet' href='stylesheets/module.css'>
+    <link rel='stylesheet' href='stylesheets/style.css'>
+  <head>
+    <title>What's His Deal?</title>
+  </head>
   <body>
-    <textarea id="textBox">Paste a chat log or email from the male in question into here for analysis. Alternatively, you can also drag-and-drop a screenshot or picture of him from your computer.</textarea>
-    <a href="answerpage.html">
-      <div id="analyze"></div>
-    </a>
+    <header id="header" class="container" title="Like, really?">
+      <section>
+        <img src="images/logo.png" alt="What's his deal?" id="logo" />
+      </section>
+    </header>
+    <body>
+      <textarea id="textBox">Paste a chat log or email from the male in question into here for analysis. Alternatively, you can also drag-and-drop a screenshot or picture of him from your computer.</textarea>
+      <a href="answerpage.html">
+        <div id="analyze"></div>
+      </a>
+    </body>
   </body>
-  <footer>
-  </footer>
-</body>
+  <script type="text/javascript" src="HisDealGenerator.js"></script>
 </html>
