--- a/index.html
+++ b/index.html
@@ -19,6 +19,12 @@
       <a href="answerpage.html">
         <div id="analyze"></div>
       </a>
+      <h1 id="hisDeal">&nbsp;</h1>
+      <p>
+        <a href="index.html">
+          Check another conversation!
+        </a>
+      </p>
     </body>
   </body>
   <script type="text/javascript" src="HisDealGenerator.js"></script>
