--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       </section>
     </header>
     <body>
-      <textarea id="textBox">Paste a chat log or email from the male in question into here for analysis. Alternatively, you can also drag-and-drop a screenshot or picture of him from your computer.</textarea>
+      <textarea id="textBox">Paste a chat log or email from the male in question into here for analysis. (It doesn't have to be pretty. Our engine is that smart.)</textarea>
       <div id="analyze"></div>
       <h1 id="hisDeal">&nbsp;</h1>
       <p>
