--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       </p>
     </body>
   </body>
-  <script type="text/javascript" src="HisDealGenerator.js"></script>
+  <script type="text/javascript" src="js/HisDealGenerator.js"></script>
   <!--- Event listeners on the DOM must go at the end -->
   <script type="text/javascript" src="js/events.js"></script>
 </html>
