Prelim set up of order page functionality.

--- a/orderpage.html
+++ b/orderpage.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
   <html>
-    <script type="text/javascript" src="HisDealGenerator.js"></script>
+    <script type="text/javascript" src="js/buy.js"></script>
     <link rel='stylesheet' href='stylesheets/base.css'>
     <link rel='stylesheet' href='stylesheets/skeleton.css'>
     <link rel='stylesheet' href='stylesheets/state.css'>
@@ -17,12 +17,16 @@
       <legend>What's your deal?</legend>
       <label>
         Name:
-        <input type="text" name="name" />
+        <input type="text" name="name" id="name"/>
       </label>
       <label type="">
         Age:
         <input type=""
       </label>
     </fieldset>
+      <div id="buybutton"><img src= "http://cdn2.bigcommerce.com/n-arxsrf/iuqk850/product_images/uploaded_images/btnbuynow.jpg?t=1403032575"/></div>
+
+      <h1 id="orderthanks">&nbsp;</h1>
+
   </body>
 </html>
