Adds placeholder value

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       </section>
     </header>
     <body>
-      <textarea id="textBox" class="inputBox" mutexid="imgBox">Paste a chat log or email from the male in question into here for analysis. (It doesn't have to be pretty. Our engine is that smart.)</textarea>
+      <textarea id="textBox" class="inputBox" mutexid="imgBox" placeholder="Paste a chat log or email from the male in question into here for analysis. (It doesn't have to be pretty. Our engine is that smart.)"></textarea>
       <img id="imgBox" class="inputBox" mutexid="textBox">
       <div id="analyze"></div>
       <h1 id="hisDeal">&nbsp;</h1>
