make about and order pages nice

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <head>
     <title>What's His Deal?</title>
   </head>
-  <body>
+  <body id="indexBackground">
     <header id="header" class="container" title="Like, really?">
       <section>
         <img src="images/logo.png" alt="What's his deal?" id="logo" />
@@ -22,7 +22,11 @@
       <h1 id="hisDeal">&nbsp;</h1>
       <p>
         <a href="index.html">
-          Check another conversation!
+          Check another conversation
+        </a>
+        or
+        <a href="about.html">
+          find out more about us!
         </a>
       </p>
     </body>
