refactor js into separate named files, prepare for more OO

--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
-    <meta charset="utf-8">
-    <link rel='stylesheet' href='stylesheets/base.css'>
-    <link rel='stylesheet' href='stylesheets/skeleton.css'>
-    <link rel='stylesheet' href='stylesheets/state.css'>
-    <link rel='stylesheet' href='stylesheets/module.css'>
-    <link rel='stylesheet' href='stylesheets/style.css'>
+  <meta charset="utf-8">
+  <link rel='stylesheet' href='stylesheets/base.css'>
+  <link rel='stylesheet' href='stylesheets/skeleton.css'>
+  <link rel='stylesheet' href='stylesheets/state.css'>
+  <link rel='stylesheet' href='stylesheets/module.css'>
+  <link rel='stylesheet' href='stylesheets/style.css'>
   <head>
     <title>What's His Deal?</title>
   </head>
@@ -31,7 +31,7 @@
       </p>
     </body>
   </body>
-  <script type="text/javascript" src="js/HisDealGenerator.js"></script>
+  <script type="text/javascript" src="js/lib.js"></script>
   <!--- Event listeners on the DOM must go at the end -->
-  <script type="text/javascript" src="js/events.js"></script>
+  <script type="text/javascript" src="js/index.js"></script>
 </html>
