--- a/orderpage.html
+++ b/orderpage.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
-  <html>
-    <link rel='stylesheet' href='stylesheets/base.css'>
-    <link rel='stylesheet' href='stylesheets/skeleton.css'>
-    <link rel='stylesheet' href='stylesheets/state.css'>
-    <link rel='stylesheet' href='stylesheets/module.css'>
-    <link rel='stylesheet' href='stylesheets/style.css'>
+<html>
+  <meta charset="utf-8">
+  <link rel='stylesheet' href='stylesheets/base.css'>
+  <link rel='stylesheet' href='stylesheets/skeleton.css'>
+  <link rel='stylesheet' href='stylesheets/state.css'>
+  <link rel='stylesheet' href='stylesheets/module.css'>
+  <link rel='stylesheet' href='stylesheets/style.css'>
   <head>
     <title>Complete your order - What's His Deal?</title>
   </head>
@@ -37,6 +38,7 @@
       <div id="buybutton"><img src= "images/buybutton.png"/></div>
 
       <h1 id="orderthanks">&nbsp;</h1>
-    <script type="text/javascript" src="js/buy.js"></script>
+    <script type="text/javascript" src="js/lib.js"></script>
+    <script type="text/javascript" src="js/orderpage.js"></script>
   </body>
 </html>
