--- a/about.html
+++ b/about.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html>
-    <link rel='stylesheet' href='stylesheets/base.css'>
-    <link rel='stylesheet' href='stylesheets/skeleton.css'>
-    <link rel='stylesheet' href='stylesheets/state.css'>
-    <link rel='stylesheet' href='stylesheets/module.css'>
-    <link rel='stylesheet' href='stylesheets/style.css'>
+  <meta charset="utf-8">
+  <link rel='stylesheet' href='stylesheets/base.css'>
+  <link rel='stylesheet' href='stylesheets/skeleton.css'>
+  <link rel='stylesheet' href='stylesheets/state.css'>
+  <link rel='stylesheet' href='stylesheets/module.css'>
+  <link rel='stylesheet' href='stylesheets/style.css'>
   <head>
     <title>About - What's His Deal?</title>
   </head>
