add link to video of Mindy's talk

--- a/about.html
+++ b/about.html
@@ -16,7 +16,7 @@
       <div class="whiteBox">
         <h1>What's Our Deal?</h1>
         <p class="aboutText">
-          What's His Deal is a novelty website inspired by a talk Mindy Kaling gave at Made With Code in 2014.
+          What's His Deal is a novelty website inspired by a <a href="https://www.youtube.com/watch?v=IscstLkpZ-M">talk</a> Mindy Kaling gave at Made With Code in 2014.
         </p>
         <p class="aboutText">
           The idea of the game is to insert a conversation you've had with a guy where you had no idea what his deal was, and we'll tell you what it is! It's supposed to be silly and all in good fun.
