simple js file for finding occurances of a substring, add a few more whatshisdeals

--- a/index.html
+++ b/index.html
@@ -34,4 +34,5 @@
   <script type="text/javascript" src="js/lib.js"></script>
   <!--- Event listeners on the DOM must go at the end -->
   <script type="text/javascript" src="js/index.js"></script>
+  <script type="text/javascript" src="js/analysis.js"></script>
 </html>
