add function to count smiley faces and return the number in an alert

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <body>
       <textarea id="textBox" class="inputBox" mutexid="imgBox" placeholder="Paste a chat log, email, or drag and drop a picture of the male in question into this box for analysis. (It doesn't have to be pretty. Our engine is that smart.)"></textarea>
       <img id="imgBox" class="inputBox" mutexid="textBox">
-      <div id="analyze"></div>
+      <div id="analyze" onclick="countEmotes()"></div>
       <h1 id="hisDeal">&nbsp;</h1>
       <p>
         <a href="index.html">
